Update Google Analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119969569-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-119969569-1');
+  </script>
+
+
   <title> Matthew Alcorn | Home </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -29,9 +40,15 @@
 
       <div class="collapse navbar-collapse navHeaderCollapse">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">HOME</a></li>
-          <li><a href="/views/portfolio.html">PORTFOLIO</a></li>
-          <li><a href="/views/resume.html">RESUME</a></li>
+          <li class="active">
+            <a href="#">HOME</a>
+          </li>
+          <li>
+            <a href="/views/portfolio.html">PORTFOLIO</a>
+          </li>
+          <li>
+            <a href="/views/resume.html">RESUME</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -45,18 +62,29 @@
           <br>
           <hr>
           <br>
-          <p class="text-center homecard"><i>Matt is an accomplished developer, creative, and automator. He enjoys writing code, designing user interfaces, and optimizing processes. Matt currently works as a software engineer and designer at Lenovo where he builds and designs mobile apps for managing hardware environments.</i></p>
+          <p class="text-center homecard">
+            <i>Matt is an accomplished developer, creative, and automator. He enjoys writing code, designing user interfaces,
+              and optimizing processes. Matt currently works as a software engineer and designer at Lenovo where he builds
+              and designs mobile apps for managing hardware environments.</i>
+          </p>
         </div>
       </div>
     </div>
   </div>
 
   <div class="container">
-    <div class="row col-md-8 col-md-offset-3">
+    <div class="row col-md-8 col-md-offset-2">
       <div class="col-md-4 text-center">
         <a href="https://www.linkedin.com/in/mattalco" target="_blank">
           <div class="thumbnail mra-social-containers">
             <i class="fa fa-linkedin fa-4x"></i>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="mailto:hello@mattalcorn.com?subject=MattAlcorn.com">
+          <div class="thumbnail mra-social-containers">
+            <i class="fa fa-envelope fa-4x"></i>
           </div>
         </a>
       </div>
