--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
               and optimizing processes. Matt currently works as a software engineer and designer at Lenovo where he builds
               and designs mobile apps for managing hardware environments.</i>
           </p>
+          <hr>
+          <p class="text-center">Looking for Aspire Budgeting? Visit the reddit page for more information - <a href="https://www.reddit.com/r/aspirebudgeting/" target="_blank">/r/aspirebudgeting</a></p>
         </div>
       </div>
     </div>
@@ -104,7 +106,7 @@
     <div class="container">
       <p class="text-muted text-center">Built with
         <img class="footer-img" width=25px height=25px src="images/bootstrap-solid.svg" alt="Bootstrap"> and
-        <img class="footer-img" width=40px height=35px src="images/sass.svg" alt="SASS"> &#160; &#160; &#169; 2017
+        <img class="footer-img" width=40px height=35px src="images/sass.svg" alt="SASS"> &#160; &#160; &#169; 2018
       </p>
     </div>
   </footer>
