a few style updates

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             <a href="/views/portfolio.html">PORTFOLIO</a>
           </li>
           <li>
-            <a href="/views/resume.html">RESUME</a>
+            <a target="_blank" href="../files/alcorn_resume.pdf">RESUME
+              <i class="fa fa-external-link mra-resume-link-icon" aria-hidden="true"></i>
+            </a>
           </li>
         </ul>
       </div>
@@ -64,8 +66,7 @@
           <br>
           <p class="text-center homecard">
             <i>Matt is an accomplished developer, creative, and automator. He enjoys writing code, designing user interfaces,
-              and optimizing processes. Matt currently works as a software engineer and designer at Lenovo where he builds
-              and designs mobile apps for managing hardware environments.</i>
+              and optimizing processes. Matt is currently taking a sabbatical from working in software and has a job at his local church.</i>
           </p>
           <hr>
           <p class="text-center">Looking for Aspire Budgeting? Visit the reddit page for more information - <a href="https://www.reddit.com/r/aspirebudgeting/" target="_blank">/r/aspirebudgeting</a></p>
@@ -106,7 +107,7 @@
     <div class="container">
       <p class="text-muted text-center">Built with
         <img class="footer-img" width=25px height=25px src="images/bootstrap-solid.svg" alt="Bootstrap"> and
-        <img class="footer-img" width=40px height=35px src="images/sass.svg" alt="SASS"> &#160; &#160; &#169; 2018
+        <img class="footer-img" width=40px height=35px src="images/sass.svg" alt="SASS"> &#160; &#160; &#169; 2022
       </p>
     </div>
   </footer>
